2013-11-08  Andoni Morales <amorales@fluendo.com>

	* configure.ac:
	* Makefile.am:
	Fix link error in Windows (error: -fPIC ingnored)

2013-10-25  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.6 ===

2013-10-25  Julien Moutte <julien@fluendo.com>

	* Makefile.am: Don't generate the .a for the shared library as we have
	the static one generated apart.

2013-10-25  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.5 ===

2013-10-25  Julien Moutte <julien@fluendo.com>

	* Makefile.am: Build two flavors of the library (static and dynamic)
	* configure.ac: Generate all pc files.
	* fludownloader_static.pc.in: Add a pkgconfig file for static linking.
	* libfludownloader.spec.in: Adapt spec file to build the static rpm
	with the static libraries and proper pkgconfig.

2013-10-25  Julien Moutte <julien@fluendo.com>

	* libfludownloader.spec.in: don't include libtool la file.

2013-10-25  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.4 ===

2013-10-25  Julien Moutte <julien@fluendo.com>

	* INSTALL: Updated.
	* Makefile.am: Generate relocatable code to link with plugins.
	* libfludownloader.spec.in: Properly generate a static package that
	will contain only the static library and headers.

2013-10-24  Julien Moutte <julien@fluendo.com>

	* libfludownloader.spec.in: Fix spec file :)

2013-10-24  Julien Moutte <julien@fluendo.com>

	* INSTALL: Updated.
	* Makefile.am: Distribute spec file.
	* configure.ac: Generate spec file.
	* libfludownloader.spec.in: Add a spec file to build RPMs.

2013-09-30  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.3 ===

2013-23-09  Andoni Morales  <amorales@fluendo.com>

	* configure.ac:
	* Makefile.am:
	Fix DLL generation with magic libtool's -no-undefined option

2013-23-09  Andoni Morales  <amorales@fluendo.com>

	* examples/multidl.c:
	* lib/fludownloader.c: